[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level1.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 243.577, 248.889 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 265.368, 97.9801 )

[node name="Level1" type="Node2D"]
script = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 1177.06, 292.685 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
scale = Vector2( 7.87763, 7.87763 )
texture = ExtResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 742.116, -159.724 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D2"]
scale = Vector2( 7.87763, 7.87763 )
texture = ExtResource( 1 )

[node name="small" type="StaticBody2D" parent="."]
position = Vector2( 489.992, 310.353 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="small"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="small"]
modulate = Color( 1, 1, 1, 0.211765 )
position = Vector2( -1.05945, 0 )
scale = Vector2( -8.32267, 3.04704 )
texture = ExtResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 718.305, 772.08 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D3"]
scale = Vector2( 7.87763, 7.87763 )
texture = ExtResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 223.036, 773.667 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D4"]
scale = Vector2( 7.87763, 7.87763 )
texture = ExtResource( 1 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2( -205.562, 302.209 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D5"]
scale = Vector2( 7.87763, 7.87763 )
texture = ExtResource( 1 )

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
position = Vector2( 253.197, -158.137 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="StaticBody2D6"]
scale = Vector2( 7.87763, 7.87763 )
texture = ExtResource( 1 )

[node name="top_left" type="Position2D" parent="."]
position = Vector2( 78.3991, 129.18 )

[node name="bottom_right" type="Position2D" parent="."]
position = Vector2( 893.48, 487.148 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 49.3883
margin_top = 443.372
margin_right = 345.388
margin_bottom = 574.372
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cohesion_label" type="Label" parent="GridContainer"]
margin_top = 1.0
margin_right = 112.0
margin_bottom = 15.0
text = "cohesion 00"

[node name="cohesion" type="HSlider" parent="GridContainer"]
margin_left = 116.0
margin_right = 316.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
max_value = 20.0
step = 0.1
value = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="align_label" type="Label" parent="GridContainer"]
margin_top = 21.0
margin_right = 112.0
margin_bottom = 35.0
text = "alignment 00"

[node name="align" type="HSlider" parent="GridContainer"]
margin_left = 116.0
margin_top = 20.0
margin_right = 316.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 0 )
max_value = 5.0
step = 0.01
value = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="separation_label" type="Label" parent="GridContainer"]
margin_top = 41.0
margin_right = 112.0
margin_bottom = 55.0
text = "separation 00"

[node name="separation" type="HSlider" parent="GridContainer"]
margin_left = 116.0
margin_top = 40.0
margin_right = 316.0
margin_bottom = 56.0
rect_min_size = Vector2( 200, 0 )
max_value = 20.0
step = 0.1
value = 2.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="view_label" type="Label" parent="GridContainer"]
margin_top = 61.0
margin_right = 112.0
margin_bottom = 75.0
text = "view 00"

[node name="view" type="HSlider" parent="GridContainer"]
margin_left = 116.0
margin_top = 60.0
margin_right = 316.0
margin_bottom = 76.0
rect_min_size = Vector2( 200, 0 )
value = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="obstacle_label" type="Label" parent="GridContainer"]
margin_top = 80.0
margin_right = 112.0
margin_bottom = 111.0
text = "avoid obstacle 00
"

[node name="obstacle" type="HSlider" parent="GridContainer"]
margin_left = 116.0
margin_top = 80.0
margin_right = 316.0
margin_bottom = 96.0
rect_min_size = Vector2( 200, 0 )
max_value = 1000.0
step = 20.0
value = 380.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speed_label" type="Label" parent="GridContainer"]
margin_top = 116.0
margin_right = 112.0
margin_bottom = 130.0
text = "speed 00"

[node name="speed" type="HSlider" parent="GridContainer"]
margin_left = 116.0
margin_top = 115.0
margin_right = 316.0
margin_bottom = 131.0
rect_min_size = Vector2( 200, 0 )
min_value = 10.0
max_value = 1000.0
step = 10.0
value = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 121.626, 263.067 )

[connection signal="value_changed" from="GridContainer/cohesion" to="." method="_on_cohesion_value_changed"]
[connection signal="value_changed" from="GridContainer/align" to="." method="_on_align_value_changed"]
[connection signal="value_changed" from="GridContainer/separation" to="." method="_on_separation_value_changed"]
[connection signal="value_changed" from="GridContainer/view" to="." method="_on_view_value_changed"]
[connection signal="value_changed" from="GridContainer/obstacle" to="." method="_on_obstacle_value_changed"]
[connection signal="value_changed" from="GridContainer/speed" to="." method="_on_speed_value_changed"]
